<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Walk Finder</string>
    <string name="action_settings">Settings</string>
    <string name="start_loc_label">Start:</string>
    <string name="end_loc_label">End:</string>
    <string name="start_loc_hint">Start Location</string>
    <string name="end_loc_hint">End Location</string>
    <string name="end_loc_checkbox">Same as start</string>
    <string name="duration">Duration</string>
    <string name="minutes">min</string>
    <string name="hours">hr</string>
    <string name="go">Go</string>
    
</resources>
